replaced utils with rdkit geometry module

--- a/notebooks/detect_rings.ipynb
+++ b/notebooks/detect_rings.ipynb
@@ -20,9 +20,7 @@
    "cell_type": "code",
    "execution_count": 69,
    "metadata": {
-    "code_folding": [
-     0
-    ],
+    "code_folding": [],
     "collapsed": true
    },
    "outputs": [],
